--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -59,11 +59,17 @@ jobs:
       - name: Build flatpak
         run: make -C _build -j $(getconf _NPROCESSORS_ONLN)
 
-      - continue-on-error: true
-        run: |
-          ls -lX /home/runner/work/flatpak/flatpak/_build
-          ls -lX /home/runner/work/flatpak/flatpak/_build/app
-          ls -lX /home/runner/work/flatpak/flatpak/_build/common
+      - run: ls -lX /home/runner/work/flatpak/flatpak/_build
+      - run: ls -lX /home/runner/work/flatpak/flatpak/_build/app
+      - run: ls -lX /home/runner/work/flatpak/flatpak/_build/common
+      
+      - name: upload exe
+        uses: actions/upload-artifact@v3
+        with:
+          name: exe
+          path: /home/runner/work/flatpak/flatpak/_build/app/flatpak
+          if-no-files-found: error
+          retention-days: 90
 
       - name: Run tests
         run: make -C _build check -j $(getconf _NPROCESSORS_ONLN)
