--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -7,19 +7,20 @@ on:
   workflow_dispatch:
 
 jobs:
-  check:
-    name: Build with gcc and test
-    runs-on: ubuntu-22.04
+  check-alt2:
+    name: Build with gcc and test (older)
+    runs-on: ubuntu-18.04
     steps:
       - name: Install Dependencies
         run: |
+          sudo add-apt-repository ppa:flatpak/stable
+          sudo add-apt-repository 'deb https://download.mono-project.com/repo/ubuntu stable-bionic main' # Needed for updates to work
           sudo apt-get update
           sudo apt-get install -y libglib2.0-dev attr automake gettext autopoint bison  dbus gtk-doc-tools \
-          libfuse3-dev ostree libostree-dev libarchive-dev libzstd-dev libcap-dev libattr1-dev libdw-dev libelf-dev python3-pyparsing \
+          libfuse-dev ostree libostree-dev libarchive-dev libzstd-dev libcap-dev libattr1-dev libdw-dev libelf-dev python3-pyparsing \
           libjson-glib-dev shared-mime-info desktop-file-utils libpolkit-agent-1-dev libpolkit-gobject-1-dev \
           libseccomp-dev libsoup2.4-dev libcurl4-openssl-dev libsystemd-dev libxml2-utils libgpgme11-dev gobject-introspection \
-          libgirepository1.0-dev libappstream-dev libdconf-dev clang socat meson libdbus-1-dev e2fslibs-dev bubblewrap xdg-dbus-proxy \
-          python3-pip meson ninja-build libyaml-dev libstemmer-dev gperf itstool libmalcontent-0-dev
+          libgirepository1.0-dev libappstream-dev libdconf-dev clang socat meson libdbus-1-dev e2fslibs-dev
           # One of the tests wants this
           sudo mkdir /tmp/flatpak-com.example.App-OwnedByRoot
           ldd --version
@@ -28,16 +29,6 @@ jobs:
         uses: actions/checkout@v1
         with:
           submodules: true
-
-      - name: Build appstream dependency # (We need at least 0.15.3 for the g_once fix)
-        run: |
-          sudo pip3 install 'meson~=0.62'
-          git clone --branch v0.15.4 --depth 1 --no-tags https://github.com/ximion/appstream.git ./appstream
-          pushd ./appstream
-          meson setup --prefix=/usr _build
-          ninja -C _build
-          sudo ninja -C _build install
-          popd
 
       - name: Create logs dir
         run: mkdir test-logs
@@ -51,7 +42,7 @@ jobs:
         run: |
           mkdir _build
           pushd _build
-          ../configure  --enable-internal-checks --enable-asan --disable-introspection --with-curl --with-system-bubblewrap --with-system-dbus-proxy
+          ../configure  --enable-internal-checks --enable-asan --disable-introspection --without-curl
           popd
         env:
           CFLAGS: -O2 -Wp,-D_FORTIFY_SOURCE=2
@@ -60,9 +51,9 @@ jobs:
         run: make -C _build -j $(getconf _NPROCESSORS_ONLN)
 
       - run: ls -lX /home/runner/work/flatpak/flatpak/_build
-      #- run: ls -lX /home/runner/work/flatpak/flatpak/_build/app
-      #- run: ls -lX /home/runner/work/flatpak/flatpak/_build/common
-      
+      - run: ls -lX /home/runner/work/flatpak/flatpak/_build/app
+      - run: ls -lX /home/runner/work/flatpak/flatpak/_build/common
+
       - name: upload exe
         uses: actions/upload-artifact@v3
         with:
@@ -70,6 +61,16 @@ jobs:
           path: /home/runner/work/flatpak/flatpak/_build/flatpak
           if-no-files-found: error
           retention-days: 90
+
+      # We build with Ubuntu 18.04's GLib to prove that we can, but there's a
+      # race condition that makes it fail tests, so upgrade to a version from
+      # a PPA before running the tests: see
+      # https://github.com/flatpak/flatpak/pull/3121,
+      # https://gitlab.gnome.org/GNOME/glib/-/issues/1014
+      - name: Upgrade GLib before running tests
+        run: |
+          sudo add-apt-repository ppa:alexlarsson/glib260
+          sudo apt-get install -y libglib2.0-dev
 
       - name: Run tests
         run: make -C _build check -j $(getconf _NPROCESSORS_ONLN)
