--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -53,7 +53,7 @@ jobs:
         run: make -C _build -j $(getconf _NPROCESSORS_ONLN)
 
       - name: make install
-        run: make DESTDIR=/home/runner/work/flatpak/flatpak/packaged install
+        run: make -C _build -j $(getconf _NPROCESSORS_ONLN) DESTDIR=/home/runner/work/flatpak/flatpak/packaged install
 
       - run: ls -lX /home/runner/work/flatpak/flatpak/packaged
       - run: ls -lX /home/runner/work/flatpak/flatpak/_build
